--- a/jai/index.html
+++ b/jai/index.html
@@ -9,7 +9,7 @@
     <hr>
     <div style="text-align:center; color:orange">
         <p>
-            Instagram is a photo and video sharing social networking service owned by American company Meta Platforms. 
+            Insta and video sharing social networking service owned by American company Meta Platforms. 
             The app allows users to upload media that can be edited with filters and 
             organized by hashtags and geographical tagging. Posts can be shared publicly or with preapproved followers.
         </p>
